--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "lazystream",
-  "version": "1.0.1",
+  "name": "@kapmug/node-lazystream",
+  "version": "1.0.1-1",
   "description": "Open Node Streams on demand.",
   "homepage": "https://github.com/jpommerening/node-lazystream",
   "author": {
@@ -21,7 +21,7 @@
   "license": "MIT",
   "main": "lib/lazystream.js",
   "engines": {
-    "node": ">= 0.6.3"
+    "node": ">= 6"
   },
   "scripts": {
     "test": "nodeunit test/readable_test.js test/writable_test.js test/pipe_test.js test/fs_test.js"
@@ -32,10 +32,13 @@
     "test/*.md"
   ],
   "dependencies": {
-    "readable-stream": "^2.0.5"
+    "readable-stream": "^3.2.0 || 3.6.2"
+  },
+  "resolutions": {
+    "minimatch": "^2.0.1 || 3.0.2"
   },
   "devDependencies": {
-    "nodeunit": "^0.9.1"
+    "nodeunit": "0.9.1"
   },
   "keywords": [
     "emfile",
